[package]
name = "bytematch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = {version = "2.0.8", features = ["rustls"]}
tokio = {features = ["macros", "rt-multi-thread"] }
eyre = "0.6.8"
which = "4.4.0"
spinoff = "0.8.0"
clap = { version = "4.3.22", features = ["derive"] }
interactive-clap = "0.2.4"
color-eyre = "0.6.2"
shell-words = "1.1.0"
inquire = "0.6.2"
